# zmk-studio-api

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
examples/: basic_example.py  basic_example.rs  studio_probe.rs
src/: binding.rs  client.rs  framing.rs  hid_usage.rs  keycode.rs  keycode_zmk_generated.rs  lib.rs  proto.rs  protocol.rs  python.rs
src/transport/: ble.rs  mod.rs  serial.rs
