[package]
name = "zmk-studio-api"
license = "Apache-2.0"
description = "Rust + Python client for the ZMK Studio RPC API (Serial + BLE)"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/zmk-studio-api"
readme = "README.md"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["serial"]
serial = ["dep:serialport"]
ble = ["dep:btleplug", "dep:futures", "dep:tokio", "dep:uuid"]
python = ["dep:pyo3"]

[dependencies]
prost = "0.13"
num_enum = "0.7"
strum = "0.26"
strum_macros = "0.26"
serialport = { version = "4.8", optional = true }
btleplug = { version = "0.11", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1.11", optional = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
