[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "zmk-studio-api"
version = "0.1.0"
description = "Python bindings for zmk-studio-api"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["python", "serial"]
module-name = "zmk_studio_api"
